--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 <!-- CINTA -->
 <section class="marquee">
   <div class="marquee-track">
-    <span>🔥 2x1 los viernes en “Dulce Picante”</span>
-    <span>🥘 Receta gratis con cada pedido</span>
-    <span>🌶️ Nivel picante configurable</span>
-    <span>🚚 Envío 24/48h</span>
-    <span>⭐ 4.9/5 en reseñas</span>
+    <span>2x1 los viernes en “Dulce Picante”</span>
+    <span>Receta gratis con cada pedido</span>
+    <span>Nivel picante configurable</span>
+    <span>Envío 24/48h</span>
+    <span>4.9/5 en reseñas</span>
 
     <!-- duplicado para animación futura -->
-    <span>🔥 2x1 los viernes en “Dulce Picante”</span>
-    <span>🥘 Receta gratis con cada pedido</span>
-    <span>🌶️ Nivel picante configurable</span>
-    <span>🚚 Envío 24/48h</span>
-    <span>⭐ 4.9/5 en reseñas</span>
+    <span>2x1 los viernes en “Dulce Picante”</span>
+    <span>Receta gratis con cada pedido</span>
+    <span>Nivel picante configurable</span>
+    <span>Envío 24/48h</span>
+    <span>4.9/5 en reseñas</span>
   </div>
 </section>
 
